--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
-    "compilerOptions": {
-        "strict": true
-    },
-    "extends": "expo/tsconfig.base"
+  "compilerOptions": {
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "react-native-calendars": [
+        "node_modules/@types/react-native-calendars"
+      ]
+    }
+  },
+  "extends": "expo/tsconfig.base"
 }
